fix ios font spacing

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Roboto Slab', serif;
+  font-weight: 400;
 }
 
 section {
